src/pycypher/core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    DQUOTE
    NOT

Grammar

Rule 0     S' -> cypher
Rule 1     cypher -> query
Rule 2     query -> match_pattern return
Rule 3     string -> STRING
Rule 4     integer -> INTEGER
Rule 5     float -> FLOAT
Rule 6     name_label -> WORD
Rule 7     name_label -> WORD COLON WORD
Rule 8     name_label -> COLON WORD
Rule 9     mapping_list -> WORD COLON literal
Rule 10    mapping_list -> mapping_list COMMA WORD COLON literal
Rule 11    node -> LPAREN name_label RPAREN
Rule 12    node -> LPAREN name_label LCURLY mapping_list RCURLY RPAREN
Rule 13    node -> LPAREN RPAREN
Rule 14    node -> LPAREN WORD RPAREN
Rule 15    alias -> WORD AS WORD
Rule 16    alias -> object_attribute_lookup AS WORD
Rule 17    alias -> aggregation AS WORD
Rule 18    literal -> integer
Rule 19    literal -> float
Rule 20    literal -> STRING
Rule 21    relationship -> LSQUARE WORD RSQUARE
Rule 22    relationship -> LSQUARE name_label RSQUARE
Rule 23    left_right -> DASH relationship DASH GREATERTHAN
Rule 24    right_left -> LESSTHAN DASH relationship DASH
Rule 25    incomplete_relationship_chain -> node left_right
Rule 26    incomplete_relationship_chain -> node right_left
Rule 27    incomplete_relationship_chain -> incomplete_relationship_chain node left_right
Rule 28    incomplete_relationship_chain -> incomplete_relationship_chain node right_left
Rule 29    relationship_chain -> incomplete_relationship_chain node
Rule 30    relationship_chain_list -> relationship_chain
Rule 31    relationship_chain_list -> relationship_chain_list COMMA relationship_chain
Rule 32    with_as_series -> alias
Rule 33    with_as_series -> with_as_series COMMA alias
Rule 34    collect -> COLLECT LPAREN object_attribute_lookup RPAREN
Rule 35    aggregation -> collect
Rule 36    aggregation -> DISTINCT aggregation
Rule 37    with_clause -> WITH with_as_series
Rule 38    match_pattern -> MATCH node
Rule 39    match_pattern -> MATCH relationship_chain_list
Rule 40    match_pattern -> MATCH relationship_chain_list with_clause
Rule 41    match_pattern -> MATCH relationship_chain_list where
Rule 42    match_pattern -> MATCH relationship_chain_list with_clause where
Rule 43    match_pattern -> MATCH node where
Rule 44    match_pattern -> MATCH node with_clause where
Rule 45    binary_operator -> EQUALS
Rule 46    binary_operator -> LESSTHAN
Rule 47    binary_operator -> GREATERTHAN
Rule 48    binary_operator -> OR
Rule 49    binary_operator -> AND
Rule 50    binary_function -> ADDITION
Rule 51    aliased_name -> WORD
Rule 52    predicate -> object_attribute_lookup binary_operator literal
Rule 53    predicate -> object_attribute_lookup binary_operator object_attribute_lookup
Rule 54    predicate -> aliased_name binary_operator literal
Rule 55    predicate -> object_attribute_lookup binary_operator binary_expression
Rule 56    binary_expression -> object_attribute_lookup binary_function literal
Rule 57    binary_expression -> object_attribute_lookup binary_function object_attribute_lookup
Rule 58    binary_expression -> aliased_name binary_function literal
Rule 59    binary_expression -> literal binary_function literal
Rule 60    object_attribute_lookup -> WORD DOT WORD
Rule 61    object_attribute_lookup -> WORD
Rule 62    where -> WHERE predicate
Rule 63    where -> where COMMA predicate
Rule 64    projection -> object_attribute_lookup
Rule 65    projection -> alias
Rule 66    projection -> projection COMMA alias
Rule 67    projection -> projection COMMA object_attribute_lookup
Rule 68    return -> RETURN projection

Terminals, with rules where they appear

ADDITION             : 50
AND                  : 49
AS                   : 15 16 17
COLLECT              : 34
COLON                : 7 8 9 10
COMMA                : 10 31 33 63 66 67
DASH                 : 23 23 24 24
DISTINCT             : 36
DIVIDE               : 
DOT                  : 60
DQUOTE               : 
EQUALS               : 45
FLOAT                : 5
GREATERTHAN          : 23 47
INTEGER              : 4
LCURLY               : 12
LESSTHAN             : 24 46
LPAREN               : 11 12 13 14 34
LSQUARE              : 21 22
MATCH                : 38 39 40 41 42 43 44
NOT                  : 
OR                   : 48
RCURLY               : 12
RETURN               : 68
RPAREN               : 11 12 13 14 34
RSQUARE              : 21 22
STRING               : 3 20
WHERE                : 62
WITH                 : 37
WORD                 : 6 7 7 8 9 10 14 15 15 16 17 21 51 60 60 61
error                : 

Nonterminals, with rules where they appear

aggregation          : 17 36
alias                : 32 33 65 66
aliased_name         : 54 58
binary_expression    : 55
binary_function      : 56 57 58 59
binary_operator      : 52 53 54 55
collect              : 35
cypher               : 0
float                : 19
incomplete_relationship_chain : 27 28 29
integer              : 18
left_right           : 25 27
literal              : 9 10 52 54 56 58 59 59
mapping_list         : 10 12
match_pattern        : 2
name_label           : 11 12 22
node                 : 25 26 27 28 29 38 43 44
object_attribute_lookup : 16 34 52 53 53 55 56 57 57 64 67
predicate            : 62 63
projection           : 66 67 68
query                : 1
relationship         : 23 24
relationship_chain   : 30 31
relationship_chain_list : 31 39 40 41 42
return               : 2
right_left           : 26 28
string               : 
where                : 41 42 43 44 63
with_as_series       : 33 37
with_clause          : 40 42 44

Parsing method: LALR

state 0

    (0) S' -> . cypher
    (1) cypher -> . query
    (2) query -> . match_pattern return
    (38) match_pattern -> . MATCH node
    (39) match_pattern -> . MATCH relationship_chain_list
    (40) match_pattern -> . MATCH relationship_chain_list with_clause
    (41) match_pattern -> . MATCH relationship_chain_list where
    (42) match_pattern -> . MATCH relationship_chain_list with_clause where
    (43) match_pattern -> . MATCH node where
    (44) match_pattern -> . MATCH node with_clause where

    MATCH           shift and go to state 4

    cypher                         shift and go to state 1
    query                          shift and go to state 2
    match_pattern                  shift and go to state 3

state 1

    (0) S' -> cypher .



state 2

    (1) cypher -> query .

    $end            reduce using rule 1 (cypher -> query .)


state 3

    (2) query -> match_pattern . return
    (68) return -> . RETURN projection

    RETURN          shift and go to state 6

    return                         shift and go to state 5

state 4

    (38) match_pattern -> MATCH . node
    (39) match_pattern -> MATCH . relationship_chain_list
    (40) match_pattern -> MATCH . relationship_chain_list with_clause
    (41) match_pattern -> MATCH . relationship_chain_list where
    (42) match_pattern -> MATCH . relationship_chain_list with_clause where
    (43) match_pattern -> MATCH . node where
    (44) match_pattern -> MATCH . node with_clause where
    (11) node -> . LPAREN name_label RPAREN
    (12) node -> . LPAREN name_label LCURLY mapping_list RCURLY RPAREN
    (13) node -> . LPAREN RPAREN
    (14) node -> . LPAREN WORD RPAREN
    (30) relationship_chain_list -> . relationship_chain
    (31) relationship_chain_list -> . relationship_chain_list COMMA relationship_chain
    (29) relationship_chain -> . incomplete_relationship_chain node
    (25) incomplete_relationship_chain -> . node left_right
    (26) incomplete_relationship_chain -> . node right_left
    (27) incomplete_relationship_chain -> . incomplete_relationship_chain node left_right
    (28) incomplete_relationship_chain -> . incomplete_relationship_chain node right_left

    LPAREN          shift and go to state 9

    node                           shift and go to state 7
    relationship_chain_list        shift and go to state 8
    relationship_chain             shift and go to state 10
    incomplete_relationship_chain  shift and go to state 11

state 5

    (2) query -> match_pattern return .

    $end            reduce using rule 2 (query -> match_pattern return .)


state 6

    (68) return -> RETURN . projection
    (64) projection -> . object_attribute_lookup
    (65) projection -> . alias
    (66) projection -> . projection COMMA alias
    (67) projection -> . projection COMMA object_attribute_lookup
    (60) object_attribute_lookup -> . WORD DOT WORD
    (61) object_attribute_lookup -> . WORD
    (15) alias -> . WORD AS WORD
    (16) alias -> . object_attribute_lookup AS WORD
    (17) alias -> . aggregation AS WORD
    (35) aggregation -> . collect
    (36) aggregation -> . DISTINCT aggregation
    (34) collect -> . COLLECT LPAREN object_attribute_lookup RPAREN

    WORD            shift and go to state 15
    DISTINCT        shift and go to state 18
    COLLECT         shift and go to state 19

    projection                     shift and go to state 12
    object_attribute_lookup        shift and go to state 13
    alias                          shift and go to state 14
    aggregation                    shift and go to state 16
    collect                        shift and go to state 17

state 7

    (38) match_pattern -> MATCH node .
    (43) match_pattern -> MATCH node . where
    (44) match_pattern -> MATCH node . with_clause where
    (25) incomplete_relationship_chain -> node . left_right
    (26) incomplete_relationship_chain -> node . right_left
    (62) where -> . WHERE predicate
    (63) where -> . where COMMA predicate
    (37) with_clause -> . WITH with_as_series
    (23) left_right -> . DASH relationship DASH GREATERTHAN
    (24) right_left -> . LESSTHAN DASH relationship DASH

    RETURN          reduce using rule 38 (match_pattern -> MATCH node .)
    WHERE           shift and go to state 24
    WITH            shift and go to state 25
    DASH            shift and go to state 26
    LESSTHAN        shift and go to state 27

    where                          shift and go to state 20
    with_clause                    shift and go to state 21
    left_right                     shift and go to state 22
    right_left                     shift and go to state 23

state 8

    (39) match_pattern -> MATCH relationship_chain_list .
    (40) match_pattern -> MATCH relationship_chain_list . with_clause
    (41) match_pattern -> MATCH relationship_chain_list . where
    (42) match_pattern -> MATCH relationship_chain_list . with_clause where
    (31) relationship_chain_list -> relationship_chain_list . COMMA relationship_chain
    (37) with_clause -> . WITH with_as_series
    (62) where -> . WHERE predicate
    (63) where -> . where COMMA predicate

    RETURN          reduce using rule 39 (match_pattern -> MATCH relationship_chain_list .)
    COMMA           shift and go to state 30
    WITH            shift and go to state 25
    WHERE           shift and go to state 24

    with_clause                    shift and go to state 28
    where                          shift and go to state 29

state 9

    (11) node -> LPAREN . name_label RPAREN
    (12) node -> LPAREN . name_label LCURLY mapping_list RCURLY RPAREN
    (13) node -> LPAREN . RPAREN
    (14) node -> LPAREN . WORD RPAREN
    (6) name_label -> . WORD
    (7) name_label -> . WORD COLON WORD
    (8) name_label -> . COLON WORD

    RPAREN          shift and go to state 32
    WORD            shift and go to state 33
    COLON           shift and go to state 34

    name_label                     shift and go to state 31

state 10

    (30) relationship_chain_list -> relationship_chain .

    COMMA           reduce using rule 30 (relationship_chain_list -> relationship_chain .)
    WITH            reduce using rule 30 (relationship_chain_list -> relationship_chain .)
    WHERE           reduce using rule 30 (relationship_chain_list -> relationship_chain .)
    RETURN          reduce using rule 30 (relationship_chain_list -> relationship_chain .)


state 11

    (29) relationship_chain -> incomplete_relationship_chain . node
    (27) incomplete_relationship_chain -> incomplete_relationship_chain . node left_right
    (28) incomplete_relationship_chain -> incomplete_relationship_chain . node right_left
    (11) node -> . LPAREN name_label RPAREN
    (12) node -> . LPAREN name_label LCURLY mapping_list RCURLY RPAREN
    (13) node -> . LPAREN RPAREN
    (14) node -> . LPAREN WORD RPAREN

    LPAREN          shift and go to state 9

    node                           shift and go to state 35

state 12

    (68) return -> RETURN projection .
    (66) projection -> projection . COMMA alias
    (67) projection -> projection . COMMA object_attribute_lookup

    $end            reduce using rule 68 (return -> RETURN projection .)
    COMMA           shift and go to state 36


state 13

    (64) projection -> object_attribute_lookup .
    (16) alias -> object_attribute_lookup . AS WORD

    COMMA           reduce using rule 64 (projection -> object_attribute_lookup .)
    $end            reduce using rule 64 (projection -> object_attribute_lookup .)
    AS              shift and go to state 37


state 14

    (65) projection -> alias .

    COMMA           reduce using rule 65 (projection -> alias .)
    $end            reduce using rule 65 (projection -> alias .)


state 15

    (60) object_attribute_lookup -> WORD . DOT WORD
    (61) object_attribute_lookup -> WORD .
    (15) alias -> WORD . AS WORD

  ! shift/reduce conflict for AS resolved as shift
    DOT             shift and go to state 38
    COMMA           reduce using rule 61 (object_attribute_lookup -> WORD .)
    $end            reduce using rule 61 (object_attribute_lookup -> WORD .)
    AS              shift and go to state 39

  ! AS              [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]


state 16

    (17) alias -> aggregation . AS WORD

    AS              shift and go to state 40


state 17

    (35) aggregation -> collect .

    AS              reduce using rule 35 (aggregation -> collect .)


state 18

    (36) aggregation -> DISTINCT . aggregation
    (35) aggregation -> . collect
    (36) aggregation -> . DISTINCT aggregation
    (34) collect -> . COLLECT LPAREN object_attribute_lookup RPAREN

    DISTINCT        shift and go to state 18
    COLLECT         shift and go to state 19

    aggregation                    shift and go to state 41
    collect                        shift and go to state 17

state 19

    (34) collect -> COLLECT . LPAREN object_attribute_lookup RPAREN

    LPAREN          shift and go to state 42


state 20

    (43) match_pattern -> MATCH node where .
    (63) where -> where . COMMA predicate

    RETURN          reduce using rule 43 (match_pattern -> MATCH node where .)
    COMMA           shift and go to state 43


state 21

    (44) match_pattern -> MATCH node with_clause . where
    (62) where -> . WHERE predicate
    (63) where -> . where COMMA predicate

    WHERE           shift and go to state 24

    where                          shift and go to state 44

state 22

    (25) incomplete_relationship_chain -> node left_right .

    LPAREN          reduce using rule 25 (incomplete_relationship_chain -> node left_right .)


state 23

    (26) incomplete_relationship_chain -> node right_left .

    LPAREN          reduce using rule 26 (incomplete_relationship_chain -> node right_left .)


state 24

    (62) where -> WHERE . predicate
    (52) predicate -> . object_attribute_lookup binary_operator literal
    (53) predicate -> . object_attribute_lookup binary_operator object_attribute_lookup
    (54) predicate -> . aliased_name binary_operator literal
    (55) predicate -> . object_attribute_lookup binary_operator binary_expression
    (60) object_attribute_lookup -> . WORD DOT WORD
    (61) object_attribute_lookup -> . WORD
    (51) aliased_name -> . WORD

    WORD            shift and go to state 48

    predicate                      shift and go to state 45
    object_attribute_lookup        shift and go to state 46
    aliased_name                   shift and go to state 47

state 25

    (37) with_clause -> WITH . with_as_series
    (32) with_as_series -> . alias
    (33) with_as_series -> . with_as_series COMMA alias
    (15) alias -> . WORD AS WORD
    (16) alias -> . object_attribute_lookup AS WORD
    (17) alias -> . aggregation AS WORD
    (60) object_attribute_lookup -> . WORD DOT WORD
    (61) object_attribute_lookup -> . WORD
    (35) aggregation -> . collect
    (36) aggregation -> . DISTINCT aggregation
    (34) collect -> . COLLECT LPAREN object_attribute_lookup RPAREN

    WORD            shift and go to state 51
    DISTINCT        shift and go to state 18
    COLLECT         shift and go to state 19

    with_as_series                 shift and go to state 49
    alias                          shift and go to state 50
    object_attribute_lookup        shift and go to state 52
    aggregation                    shift and go to state 16
    collect                        shift and go to state 17

state 26

    (23) left_right -> DASH . relationship DASH GREATERTHAN
    (21) relationship -> . LSQUARE WORD RSQUARE
    (22) relationship -> . LSQUARE name_label RSQUARE

    LSQUARE         shift and go to state 54

    relationship                   shift and go to state 53

state 27

    (24) right_left -> LESSTHAN . DASH relationship DASH

    DASH            shift and go to state 55


state 28

    (40) match_pattern -> MATCH relationship_chain_list with_clause .
    (42) match_pattern -> MATCH relationship_chain_list with_clause . where
    (62) where -> . WHERE predicate
    (63) where -> . where COMMA predicate

    RETURN          reduce using rule 40 (match_pattern -> MATCH relationship_chain_list with_clause .)
    WHERE           shift and go to state 24

    where                          shift and go to state 56

state 29

    (41) match_pattern -> MATCH relationship_chain_list where .
    (63) where -> where . COMMA predicate

    RETURN          reduce using rule 41 (match_pattern -> MATCH relationship_chain_list where .)
    COMMA           shift and go to state 43


state 30

    (31) relationship_chain_list -> relationship_chain_list COMMA . relationship_chain
    (29) relationship_chain -> . incomplete_relationship_chain node
    (25) incomplete_relationship_chain -> . node left_right
    (26) incomplete_relationship_chain -> . node right_left
    (27) incomplete_relationship_chain -> . incomplete_relationship_chain node left_right
    (28) incomplete_relationship_chain -> . incomplete_relationship_chain node right_left
    (11) node -> . LPAREN name_label RPAREN
    (12) node -> . LPAREN name_label LCURLY mapping_list RCURLY RPAREN
    (13) node -> . LPAREN RPAREN
    (14) node -> . LPAREN WORD RPAREN

    LPAREN          shift and go to state 9

    relationship_chain             shift and go to state 57
    incomplete_relationship_chain  shift and go to state 11
    node                           shift and go to state 58

state 31

    (11) node -> LPAREN name_label . RPAREN
    (12) node -> LPAREN name_label . LCURLY mapping_list RCURLY RPAREN

    RPAREN          shift and go to state 59
    LCURLY          shift and go to state 60


state 32

    (13) node -> LPAREN RPAREN .

    WHERE           reduce using rule 13 (node -> LPAREN RPAREN .)
    WITH            reduce using rule 13 (node -> LPAREN RPAREN .)
    DASH            reduce using rule 13 (node -> LPAREN RPAREN .)
    LESSTHAN        reduce using rule 13 (node -> LPAREN RPAREN .)
    RETURN          reduce using rule 13 (node -> LPAREN RPAREN .)
    COMMA           reduce using rule 13 (node -> LPAREN RPAREN .)


state 33

    (14) node -> LPAREN WORD . RPAREN
    (6) name_label -> WORD .
    (7) name_label -> WORD . COLON WORD

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 61
    LCURLY          reduce using rule 6 (name_label -> WORD .)
    COLON           shift and go to state 62

  ! RPAREN          [ reduce using rule 6 (name_label -> WORD .) ]


state 34

    (8) name_label -> COLON . WORD

    WORD            shift and go to state 63


state 35

    (29) relationship_chain -> incomplete_relationship_chain node .
    (27) incomplete_relationship_chain -> incomplete_relationship_chain node . left_right
    (28) incomplete_relationship_chain -> incomplete_relationship_chain node . right_left
    (23) left_right -> . DASH relationship DASH GREATERTHAN
    (24) right_left -> . LESSTHAN DASH relationship DASH

    COMMA           reduce using rule 29 (relationship_chain -> incomplete_relationship_chain node .)
    WITH            reduce using rule 29 (relationship_chain -> incomplete_relationship_chain node .)
    WHERE           reduce using rule 29 (relationship_chain -> incomplete_relationship_chain node .)
    RETURN          reduce using rule 29 (relationship_chain -> incomplete_relationship_chain node .)
    DASH            shift and go to state 26
    LESSTHAN        shift and go to state 27

    left_right                     shift and go to state 64
    right_left                     shift and go to state 65

state 36

    (66) projection -> projection COMMA . alias
    (67) projection -> projection COMMA . object_attribute_lookup
    (15) alias -> . WORD AS WORD
    (16) alias -> . object_attribute_lookup AS WORD
    (17) alias -> . aggregation AS WORD
    (60) object_attribute_lookup -> . WORD DOT WORD
    (61) object_attribute_lookup -> . WORD
    (35) aggregation -> . collect
    (36) aggregation -> . DISTINCT aggregation
    (34) collect -> . COLLECT LPAREN object_attribute_lookup RPAREN

    WORD            shift and go to state 51
    DISTINCT        shift and go to state 18
    COLLECT         shift and go to state 19

    alias                          shift and go to state 66
    object_attribute_lookup        shift and go to state 67
    aggregation                    shift and go to state 16
    collect                        shift and go to state 17

state 37

    (16) alias -> object_attribute_lookup AS . WORD

    WORD            shift and go to state 68


state 38

    (60) object_attribute_lookup -> WORD DOT . WORD

    WORD            shift and go to state 69


state 39

    (15) alias -> WORD AS . WORD

    WORD            shift and go to state 70


state 40

    (17) alias -> aggregation AS . WORD

    WORD            shift and go to state 71


state 41

    (36) aggregation -> DISTINCT aggregation .

    AS              reduce using rule 36 (aggregation -> DISTINCT aggregation .)


state 42

    (34) collect -> COLLECT LPAREN . object_attribute_lookup RPAREN
    (60) object_attribute_lookup -> . WORD DOT WORD
    (61) object_attribute_lookup -> . WORD

    WORD            shift and go to state 73

    object_attribute_lookup        shift and go to state 72

state 43

    (63) where -> where COMMA . predicate
    (52) predicate -> . object_attribute_lookup binary_operator literal
    (53) predicate -> . object_attribute_lookup binary_operator object_attribute_lookup
    (54) predicate -> . aliased_name binary_operator literal
    (55) predicate -> . object_attribute_lookup binary_operator binary_expression
    (60) object_attribute_lookup -> . WORD DOT WORD
    (61) object_attribute_lookup -> . WORD
    (51) aliased_name -> . WORD

    WORD            shift and go to state 48

    predicate                      shift and go to state 74
    object_attribute_lookup        shift and go to state 46
    aliased_name                   shift and go to state 47

state 44

    (44) match_pattern -> MATCH node with_clause where .
    (63) where -> where . COMMA predicate

    RETURN          reduce using rule 44 (match_pattern -> MATCH node with_clause where .)
    COMMA           shift and go to state 43


state 45

    (62) where -> WHERE predicate .

    COMMA           reduce using rule 62 (where -> WHERE predicate .)
    RETURN          reduce using rule 62 (where -> WHERE predicate .)


state 46

    (52) predicate -> object_attribute_lookup . binary_operator literal
    (53) predicate -> object_attribute_lookup . binary_operator object_attribute_lookup
    (55) predicate -> object_attribute_lookup . binary_operator binary_expression
    (45) binary_operator -> . EQUALS
    (46) binary_operator -> . LESSTHAN
    (47) binary_operator -> . GREATERTHAN
    (48) binary_operator -> . OR
    (49) binary_operator -> . AND

    EQUALS          shift and go to state 76
    LESSTHAN        shift and go to state 77
    GREATERTHAN     shift and go to state 78
    OR              shift and go to state 79
    AND             shift and go to state 80

    binary_operator                shift and go to state 75

state 47

    (54) predicate -> aliased_name . binary_operator literal
    (45) binary_operator -> . EQUALS
    (46) binary_operator -> . LESSTHAN
    (47) binary_operator -> . GREATERTHAN
    (48) binary_operator -> . OR
    (49) binary_operator -> . AND

    EQUALS          shift and go to state 76
    LESSTHAN        shift and go to state 77
    GREATERTHAN     shift and go to state 78
    OR              shift and go to state 79
    AND             shift and go to state 80

    binary_operator                shift and go to state 81

state 48

    (60) object_attribute_lookup -> WORD . DOT WORD
    (61) object_attribute_lookup -> WORD .
    (51) aliased_name -> WORD .

  ! reduce/reduce conflict for EQUALS resolved using rule 51 (aliased_name -> WORD .)
  ! reduce/reduce conflict for LESSTHAN resolved using rule 51 (aliased_name -> WORD .)
  ! reduce/reduce conflict for GREATERTHAN resolved using rule 51 (aliased_name -> WORD .)
  ! reduce/reduce conflict for OR resolved using rule 51 (aliased_name -> WORD .)
  ! reduce/reduce conflict for AND resolved using rule 51 (aliased_name -> WORD .)
  ! reduce/reduce conflict for ADDITION resolved using rule 51 (aliased_name -> WORD .)
    DOT             shift and go to state 38
    COMMA           reduce using rule 61 (object_attribute_lookup -> WORD .)
    RETURN          reduce using rule 61 (object_attribute_lookup -> WORD .)
    EQUALS          reduce using rule 51 (aliased_name -> WORD .)
    LESSTHAN        reduce using rule 51 (aliased_name -> WORD .)
    GREATERTHAN     reduce using rule 51 (aliased_name -> WORD .)
    OR              reduce using rule 51 (aliased_name -> WORD .)
    AND             reduce using rule 51 (aliased_name -> WORD .)
    ADDITION        reduce using rule 51 (aliased_name -> WORD .)

  ! EQUALS          [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]
  ! LESSTHAN        [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]
  ! GREATERTHAN     [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]
  ! OR              [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]
  ! AND             [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]
  ! ADDITION        [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]


state 49

    (37) with_clause -> WITH with_as_series .
    (33) with_as_series -> with_as_series . COMMA alias

    WHERE           reduce using rule 37 (with_clause -> WITH with_as_series .)
    RETURN          reduce using rule 37 (with_clause -> WITH with_as_series .)
    COMMA           shift and go to state 82


state 50

    (32) with_as_series -> alias .

    COMMA           reduce using rule 32 (with_as_series -> alias .)
    WHERE           reduce using rule 32 (with_as_series -> alias .)
    RETURN          reduce using rule 32 (with_as_series -> alias .)


state 51

    (15) alias -> WORD . AS WORD
    (60) object_attribute_lookup -> WORD . DOT WORD
    (61) object_attribute_lookup -> WORD .

  ! shift/reduce conflict for AS resolved as shift
    AS              shift and go to state 39
    DOT             shift and go to state 38
    COMMA           reduce using rule 61 (object_attribute_lookup -> WORD .)
    $end            reduce using rule 61 (object_attribute_lookup -> WORD .)

  ! AS              [ reduce using rule 61 (object_attribute_lookup -> WORD .) ]


state 52

    (16) alias -> object_attribute_lookup . AS WORD

    AS              shift and go to state 37


state 53

    (23) left_right -> DASH relationship . DASH GREATERTHAN

    DASH            shift and go to state 83


state 54

    (21) relationship -> LSQUARE . WORD RSQUARE
    (22) relationship -> LSQUARE . name_label RSQUARE
    (6) name_label -> . WORD
    (7) name_label -> . WORD COLON WORD
    (8) name_label -> . COLON WORD

    WORD            shift and go to state 84
    COLON           shift and go to state 34

    name_label                     shift and go to state 85

state 55

    (24) right_left -> LESSTHAN DASH . relationship DASH
    (21) relationship -> . LSQUARE WORD RSQUARE
    (22) relationship -> . LSQUARE name_label RSQUARE

    LSQUARE         shift and go to state 54

    relationship                   shift and go to state 86

state 56

    (42) match_pattern -> MATCH relationship_chain_list with_clause where .
    (63) where -> where . COMMA predicate

    RETURN          reduce using rule 42 (match_pattern -> MATCH relationship_chain_list with_clause where .)
    COMMA           shift and go to state 43


state 57

    (31) relationship_chain_list -> relationship_chain_list COMMA relationship_chain .

    COMMA           reduce using rule 31 (relationship_chain_list -> relationship_chain_list COMMA relationship_chain .)
    WITH            reduce using rule 31 (relationship_chain_list -> relationship_chain_list COMMA relationship_chain .)
    WHERE           reduce using rule 31 (relationship_chain_list -> relationship_chain_list COMMA relationship_chain .)
    RETURN          reduce using rule 31 (relationship_chain_list -> relationship_chain_list COMMA relationship_chain .)


state 58

    (25) incomplete_relationship_chain -> node . left_right
    (26) incomplete_relationship_chain -> node . right_left
    (23) left_right -> . DASH relationship DASH GREATERTHAN
    (24) right_left -> . LESSTHAN DASH relationship DASH

    DASH            shift and go to state 26
    LESSTHAN        shift and go to state 27

    left_right                     shift and go to state 22
    right_left                     shift and go to state 23

state 59

    (11) node -> LPAREN name_label RPAREN .

    WHERE           reduce using rule 11 (node -> LPAREN name_label RPAREN .)
    WITH            reduce using rule 11 (node -> LPAREN name_label RPAREN .)
    DASH            reduce using rule 11 (node -> LPAREN name_label RPAREN .)
    LESSTHAN        reduce using rule 11 (node -> LPAREN name_label RPAREN .)
    RETURN          reduce using rule 11 (node -> LPAREN name_label RPAREN .)
    COMMA           reduce using rule 11 (node -> LPAREN name_label RPAREN .)


state 60

    (12) node -> LPAREN name_label LCURLY . mapping_list RCURLY RPAREN
    (9) mapping_list -> . WORD COLON literal
    (10) mapping_list -> . mapping_list COMMA WORD COLON literal

    WORD            shift and go to state 88

    mapping_list                   shift and go to state 87

state 61

    (14) node -> LPAREN WORD RPAREN .

    WHERE           reduce using rule 14 (node -> LPAREN WORD RPAREN .)
    WITH            reduce using rule 14 (node -> LPAREN WORD RPAREN .)
    DASH            reduce using rule 14 (node -> LPAREN WORD RPAREN .)
    LESSTHAN        reduce using rule 14 (node -> LPAREN WORD RPAREN .)
    RETURN          reduce using rule 14 (node -> LPAREN WORD RPAREN .)
    COMMA           reduce using rule 14 (node -> LPAREN WORD RPAREN .)


state 62

    (7) name_label -> WORD COLON . WORD

    WORD            shift and go to state 89


state 63

    (8) name_label -> COLON WORD .

    RPAREN          reduce using rule 8 (name_label -> COLON WORD .)
    LCURLY          reduce using rule 8 (name_label -> COLON WORD .)
    RSQUARE         reduce using rule 8 (name_label -> COLON WORD .)


state 64

    (27) incomplete_relationship_chain -> incomplete_relationship_chain node left_right .

    LPAREN          reduce using rule 27 (incomplete_relationship_chain -> incomplete_relationship_chain node left_right .)


state 65

    (28) incomplete_relationship_chain -> incomplete_relationship_chain node right_left .

    LPAREN          reduce using rule 28 (incomplete_relationship_chain -> incomplete_relationship_chain node right_left .)


state 66

    (66) projection -> projection COMMA alias .

    COMMA           reduce using rule 66 (projection -> projection COMMA alias .)
    $end            reduce using rule 66 (projection -> projection COMMA alias .)


state 67

    (67) projection -> projection COMMA object_attribute_lookup .
    (16) alias -> object_attribute_lookup . AS WORD

    COMMA           reduce using rule 67 (projection -> projection COMMA object_attribute_lookup .)
    $end            reduce using rule 67 (projection -> projection COMMA object_attribute_lookup .)
    AS              shift and go to state 37


state 68

    (16) alias -> object_attribute_lookup AS WORD .

    COMMA           reduce using rule 16 (alias -> object_attribute_lookup AS WORD .)
    $end            reduce using rule 16 (alias -> object_attribute_lookup AS WORD .)
    WHERE           reduce using rule 16 (alias -> object_attribute_lookup AS WORD .)
    RETURN          reduce using rule 16 (alias -> object_attribute_lookup AS WORD .)


state 69

    (60) object_attribute_lookup -> WORD DOT WORD .

    AS              reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    COMMA           reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    $end            reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    EQUALS          reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    LESSTHAN        reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    GREATERTHAN     reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    OR              reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    AND             reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    RPAREN          reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    ADDITION        reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)
    RETURN          reduce using rule 60 (object_attribute_lookup -> WORD DOT WORD .)


state 70

    (15) alias -> WORD AS WORD .

    COMMA           reduce using rule 15 (alias -> WORD AS WORD .)
    $end            reduce using rule 15 (alias -> WORD AS WORD .)
    WHERE           reduce using rule 15 (alias -> WORD AS WORD .)
    RETURN          reduce using rule 15 (alias -> WORD AS WORD .)


state 71

    (17) alias -> aggregation AS WORD .

    COMMA           reduce using rule 17 (alias -> aggregation AS WORD .)
    $end            reduce using rule 17 (alias -> aggregation AS WORD .)
    WHERE           reduce using rule 17 (alias -> aggregation AS WORD .)
    RETURN          reduce using rule 17 (alias -> aggregation AS WORD .)


state 72

    (34) collect -> COLLECT LPAREN object_attribute_lookup . RPAREN

    RPAREN          shift and go to state 90


state 73

    (60) object_attribute_lookup -> WORD . DOT WORD
    (61) object_attribute_lookup -> WORD .

    DOT             shift and go to state 38
    RPAREN          reduce using rule 61 (object_attribute_lookup -> WORD .)
    COMMA           reduce using rule 61 (object_attribute_lookup -> WORD .)
    RETURN          reduce using rule 61 (object_attribute_lookup -> WORD .)


state 74

    (63) where -> where COMMA predicate .

    COMMA           reduce using rule 63 (where -> where COMMA predicate .)
    RETURN          reduce using rule 63 (where -> where COMMA predicate .)


state 75
